Addition of health system, damaging, leveling system, updated weapon behaviours, updated gamedesign document and added code documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,15 @@
 
 !Assets/Scripts/**/*.cs
 
+!Assets/Art/
+
+!Assets/Art/**/
+
+!Assets/Prefabs/
+
+!Assets/Prefabs/**/
+
 !Game Design Document.docx
+!Project Documentation_ Survivor.docx
 
 !.gitignore
